Fixing demo page main column on tablet

--- a/css/main.scss
+++ b/css/main.scss
@@ -7,9 +7,9 @@
     
     @each $media in $all-media {
         
-        @if $media == large or $media == standard or $media == tablet {
+        @if $media == large or $media == standard {
             
-            $unit: calc(#{percentage(1/12)} + (#{xgap(large)} / 11));
+            $unit: calc(#{percentage(1/13)} + (#{xgap($media)} / 12));
             padding: 0 $unit;
             
         } @else {
@@ -27,35 +27,44 @@
 .image {
     
     @each $media in $all-media {
-        
-        @include media($media) {
             
-            margin-bottom: 18px;
+        margin-bottom: 18px;
 
-            @if $media == large or $media == standard or $media == tablet {
-        
-                &.left, &.right {
-                    width: calc(50% - (#{xgap($media)} / 2));
-                }
-                    
-                &.left {
-                    float: left;
-                    margin-right: xgap($media);
-                }
+        @if $media == large or $media == standard {
+    
+            &.left, &.right {
+                width: calc(50% - (#{xgap($media)} / 2));
+            }
                 
-                &.right {
-                    float: right;
-                    margin-left: xgap($media);
-                }
+            &.left {
+                float: left;
+                margin-right: xgap($media);
+            }
+            
+            &.right {
+                float: right;
+                margin-left: xgap($media);
+            }
+
+            &.jutting {
+                $unit: calc((#{percentage(1/11)} + (#{xgap($media)} / 10)) * -1);
+                margin: 0 $unit 24px $unit;
+            }
+
+        } @else if $media == tablet {
+    
+            @include media($media) {
 
                 &.jutting {
-
-                    $unit: calc((#{percentage(1/10)} + (#{xgap($media)} / 9)) * -1);
+                    $unit: calc((#{percentage(1/13)} + (#{xgap($media)} / 12)) * -1);
                     margin: 0 $unit 24px $unit;
-
                 }
 
-            } @else {
+            }
+
+        } @else {
+
+            @include media($media) {
 
                 &.jutting {
                     $unit: calc((#{percentage(1/16)} + (#{xgap($media)} / 15)) * -1);
@@ -63,7 +72,7 @@
                 }
 
             }
-            
+
         }
         
     }
